# HAT

./: .gitignore  LICENSE  lang.cabal
app/: Main.hs
src/: Core.hs  Elf.hs  Encode.hs
src/Elf/: Elf.hs
